    	- Fix case in spectrum definition where we might ask Tcl to delete
          storage we never allocated.
        - Remove use of TkTable which disappears eventually in Tcl.
3.3-007 
??      - Ensure this all works on ring buffers.

3.3-008
	- issue 107 Fix SpecTcl-2d integration command (gives wrong answers)
	- issue 108 Support Xamine builds if OpenMotif is the motif version installed.
	- issue 105 In folder gui make spectrum save a 2-step wizard so that it fits
          on small screens better.
        - issue 973 Do a smart search for the ring buffer clients in data source tcl.
        - issue 866 Protect GUIs (folder standalone and tree) from multiple startups.

3.3-009
	- May 4, 2012 - Added cusbSpecTcl to the build.
        - June 6, 2012 - Added vmusbSpecTcl to the build.
	- June 6, 2012 Tell user about missing parameters array elements.
        - June 6, 2012 VMUSBSpecTcl - process madc -resolution config option.
3.3-010
	- June 8, 2012 Branched the development repository and upped the
                       configure.ac version to 3.3-010 
	- June 11, 2012 Issue #1089 fix order of gui startup with respect
	               to config file processing.
	- June 11, 2012 Issue #1087 correct handling when saving gates for
	               gates that have spaces in their name.
	- June 14, 2012 Issue #1008 Provide error information and exit if SpecTclRC.tcl
                        or SpecTclInit.tcl failed.
        - June 14, 2012 Issue #1070 Provide error information for failing Pseudo params.
	- June 15, 2012 Issue #1046:
	  * Default to ring format if online.
	  * Allow user to specify ring name.

        - June 15, 2012 Issue #1063 Improve new gui startup time.
3.3-011 - July 2, 2012  Issue # 1191 Save spectrum channel type (byte word longword e.g.)
          when doing a save of failsafe write.
        - July 9, 2012 Issue #1152, Issue #1150, Issue #1151, Issue #1153 - Get clean builds
          on Ubuntu Precise Pangolin.. 