@@ -985,3 +985,4 @@ November 30-?? 2011
           when doing a save of failsafe write.
         - July 9, 2012 Issue #1152, Issue #1150, Issue #1151, Issue #1153 - Get clean builds
           on Ubuntu Precise Pangolin.. 
+        - July 24, 2012 - Use 64bit clean DataFormat.h (time_t -> uint32_t).
